[gd_scene load_steps=2 format=2]

[ext_resource path="res://World/DebugAnchor.gd" type="Script" id=1]

[node name="DebugAnchor" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="RankCPos" type="Position2D" parent="."]
position = Vector2( 7984, 464 )

[node name="RankBPos" type="Position2D" parent="."]
position = Vector2( 11792, 320 )

[node name="BigTrap" type="Position2D" parent="."]
position = Vector2( 9792, 368 )

[node name="RankDPos" type="Position2D" parent="."]
position = Vector2( 6816, 240 )

[node name="TrapPos" type="Position2D" parent="."]
position = Vector2( 5360, 512 )
